--- a/coreImpl/pom.xml
+++ b/coreImpl/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>CoreApi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.bruyako</groupId>
+            <artifactId>Dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
