--- a/web/pom.xml
+++ b/web/pom.xml
@@ -82,6 +82,14 @@
             <artifactId>jquery</artifactId>
             <version>2.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
