--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bruyako</groupId>
-    <artifactId>MarketApp</artifactId>
+    <artifactId>SpringMVCExample</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>coreApi</module>
-        <module>coreImpl</module>
-        <module>dao</module>
+        <module>domain</module>
+        <module>data</module>
         <module>web</module>
     </modules>
 
@@ -38,8 +37,6 @@
                     <version>3.3</version>
                     <configuration>
                         <verbose>true</verbose>
-                        <!--<compilerVersion>1.8</compilerVersion>-->
-                        <!--<fork>true</fork>&ndash;&gt;-->
                         <source>1.8</source>
                         <target>1.8</target>
                         <maxmem>512m</maxmem>
@@ -57,7 +54,6 @@
                     <executions>
                         <execution>
                             <id>make-assembly</id>
-                            <!-- bind to the packaging phase -->
                             <phase>package</phase>
                             <goals>
                                 <goal>single</goal>
@@ -68,6 +64,5 @@
             </plugins>
         </pluginManagement>
     </build>
-
 
 </project>
