--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>MarketApp</artifactId>
+        <artifactId>SpringMVCExample</artifactId>
         <groupId>com.bruyako</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -17,12 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.bruyako</groupId>
-            <artifactId>CoreApi</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.bruyako</groupId>
-            <artifactId>CoreImpl</artifactId>
+            <artifactId>Domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -83,7 +78,6 @@
             <artifactId>servlet-api</artifactId>
             <version>3.0-alpha-1</version>
         </dependency>
-
 
     </dependencies>
 
